# sample/docs/swagger.json
@@ -33,7 +33,35 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.Result"
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/demos/list": {
+            "post": {
+                "description": "向你说描述",
+                "tags": [
+                    "Demo"
+                ],
+                "summary": "查询获取demo分页列表",
+                "parameters": [
+                    {
+                        "description": "查询参数",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schema.DemoQueryParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -59,7 +87,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.Demo"
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -67,6 +95,20 @@
         }
     },
     "definitions": {
+        "response.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "object"
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
         "schema.Demo": {
             "type": "object",
             "required": [
@@ -105,20 +147,24 @@
                 }
             }
         },
-        "schema.Result": {
+        "schema.DemoQueryParam": {
             "type": "object",
             "properties": {
-                "data": {
-                    "type": "object"
-                },
-                "msg": {
+                "code": {
+                    "description": "编号",
                     "type": "string"
                 },
-                "success": {
-                    "type": "boolean"
-                },
-                "title": {
+                "like_code": {
+                    "description": "编号(模糊查询)",
                     "type": "string"
+                },
+                "like_name": {
+                    "description": "名称(模糊查询)",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "状态(1:启用 2:停用)",
+                    "type": "integer"
                 }
             }
         }
